# pii-prompt-masker-demo

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: api.py  config.py  detectors.py  llm_client.py  main.py  pii_masker.py  pii_prompt_masker.py  settings.py
docs/: Squirro Challenge.postman_collection.json
