[tool.poetry]
name = "prompt-obfuscator-demo"
version = "0.1.0"
description = ""
authors = ["Sebastian Burdun <sebastian.burdun@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.4"}
scrubadub = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
